--- a/Main_Playbook.yaml
+++ b/Main_Playbook.yaml
@@ -3,7 +3,7 @@
   hosts: all
   tasks:
     - ansible.builtin.import_role:
-        name: /home/obabdebian/projet-ansible/roles/apache2php.yaml
+        name: apache2php.yaml
 
     - ansible.builtin.import_role:
-        name: /home/obabdebian/projet-ansible/roles/mysqlDB.yaml
+        name: mysqlDB.yaml
