--- a/mon_inventaire.ini
+++ b/mon_inventaire.ini
@@ -1,5 +1,7 @@
 [apache]
 webserver ansible_host=108.142.244.22 ansible_user=obaba
+webserver ansible_ssh_private_key_file=/var/lib/jenkins/.ssh
 
 [mysql]
 mysqlserver ansible_host=20.123.173.107 ansible_user=obabb
+mysqlserver ansible_ssh_private_key_file=/var/lib/jenkins/.ssh
