--- a/mon_inventaire.ini
+++ b/mon_inventaire.ini
@@ -2,6 +2,6 @@
 webserver ansible_host=108.142.244.22 ansible_user=obaba
 webserver ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/obab1_key.pem
 
-[mysql]
-mysqlserver ansible_host=20.123.173.107 ansible_user=obabb
-mysqlserver ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/obab2_key.pem
+#[mysql]
+#mysqlserver ansible_host=20.123.173.107 ansible_user=obabb
+#mysqlserver ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/obab2_key.pem
