--- a/Main_Playbook.yaml
+++ b/Main_Playbook.yaml
@@ -5,5 +5,5 @@
     - ansible.builtin.import_role:
         name: apache2php.yaml
 
-#    - ansible.builtin.import_role:
-#        name: mysqlDB.yaml
+    - ansible.builtin.import_role:
+        name: mysqlDB.yaml
